@@ -110,6 +110,10 @@ amulet of yendor
 	immortality to the adventurer who can deliver it from the
 	depths of Moloch's Sanctum and offer it on the appropriate high
 	altar on the Astral Plane.
+	Alternatively, it is said that by calling upon its power whilst
+	at the high altars of the Astral Plane, the Amulet will give
+	a road back home for those adventurers who would prefer a
+	mortal existence.
 angel*
 	He answered and said unto them, he that soweth the good seed
 	is the Son of man; the field is the world, and the good seed
