@@ -1645,6 +1645,7 @@ E const char *FDECL(align_gname, (ALIGNTYP_P));
 E const char *FDECL(halu_gname, (ALIGNTYP_P));
 E const char *FDECL(align_gtitle, (ALIGNTYP_P));
 E void FDECL(altar_wrath, (int,int));
+E int FDECL(invoke_amulet, (struct obj *));
 
 
 /* ### priest.c ### */
